# DentalModelSeg_C-

./: CMakeLists.txt  README.md  Src.rar  install guide.txt
Src/AdditionalLibs/: CMakeLists.txt  prereq.h
Src/AdditionalLibs/XWGeodesic/: BaseModel.cpp  BaseModel.h  Chen_Han.cpp  Chen_Han.h  DistanceApproach.cpp  DistanceApproach.h  ExactDGPMethod.cpp  Point3D.cpp  Point3d.h  RichModel.cpp  Xin_Wang.cpp
Src/AdditionalLibs/obb/: cpqp_obb_wrapper.cpp  cpqp_obb_wrapper.h
Src/AlgColle/: CMakeLists.txt  curve_base_alg.cpp  dental_base_alg.cpp  dental_base_alg.h  geo_alg.cpp  geo_alg.h  geo_base_alg.cpp  geo_base_alg.h  linear_algebra_alg.h  non_rigid_icp.cpp  non_rigid_icp.h  numerical_base_alg.cpp  prereq.h
Src/CBCTWebUI/: OrthoTooth.sln  Web.config  index.html
Src/CBCTWebUI/css/: jquery-ui.min.css  jquery-ui.theme.min.css
Src/CBCTWebUI/scripts/: CViewer.js  cBoxGeometry.js  cDicomImageViewer.js  cHistogram.js  cMeshObject.js  cOrthoTooth.js  cScene.js  cToolManager.js  cTransferFuncUI.js  cTransferFunction.js  cVolumeDataLoader.js  cVolumeDataObject.js  viewPlaneGeometry.js
Src/CBCTWebUI/scripts/tools/: cLandmarkTool.js  cManipulationTool.js  cVolumeDrawTool.js
Src/CBCTWebUI/shaders/: backTexCoordRender.vert  depthRenderer.frag  depthRenderer.vert  frontTexCoordRender.frag  frontTexCoordRender.vert  volumeRender.frag  volumeRender.vert
Src/CrownSegmentation/: CMakeLists.txt  action_base.h  action_manager.cpp  auto_harmonic_field_segmentation_action.cpp  auto_harmonic_field_segmentation_action.h  camera.h  cmodelviewer.cpp  harmonic_field_segmentation_action.cpp  harmonic_field_segmentation_action.h  hot_key_action.cpp  imface.ui  imface_window.cpp  imface_window.h  manipulation_action.cpp  new_harmonic_field_segmentation_action.cpp  new_harmonic_field_segmentation_action.h  root_reconstruction_action.cpp  root_reconstruction_action.h  scene.cpp  scene.h  scene_mesh_object.cpp  ui_context.cpp  ui_context.h
Src/CrownSegmentationPython/: CMakeLists.txt  crown_segmentation_python.cpp  crown_segmentation_python.h
Src/DataColle/: CMakeLists.txt  cgal_igl_converter.cpp  cgal_igl_converter.h  data_io.cpp  data_io.h  data_pool.cpp  data_pool.h  geo_primit.h  mesh_object.cpp  mesh_object.h  prereq.h
Src/HarmonicSegAlg/: CMakeLists.txt  crown_seg_algs.cpp  crown_seg_algs.h  harmonic_field.cpp  harmonic_field.h  prereq.h
Src/Manager/: CMakeLists.txt  command_base.h  command_list.cpp  command_list.h  context.cpp  context.h  crown_seg_commands.cpp  crown_seg_commands.h  prereq.h  root_reconstruction_commands.cpp  root_reconstruction_commands.h  segmentation_functions.cpp  segmentation_functions.h
Src/RootReconstruction/: CMakeLists.txt  prereq.h  root_reconstruction.cpp  root_reconstruction.h
Src/WebServer/: crown_segmentation_server.py  readme.txt  run  run.bat  wsgi.py
Src/WebServer/CrownSegmentationServer/: config.py  crown_segmentation_alg.py  file_uploader.py  server_main.py
Src/WebUI/: README.txt  index.html  seg_demo.html
Src/WebUI/scripts/: CViewer.js  cScene.js  cToolManager.js  config.js  crownSegmentation.js  requests.js
Src/WebUI/scripts/libs/: jquery-ui.min.js
Src/WebUI/scripts/threejs/: OrbitControls.js
Src/WebUI/scripts/tools/: cCrownSegTool.js  cLandmarkTool.js  cManipulationTool.js
